syntax = "proto3";

option go_package = "source/proto";

package proto;

service UserPostService{
    rpc SendFriendRequest(SendFriendRequestRequest) returns (SendFriendRequestReply) {};
    rpc AcceptFriendRequest(AcceptFriendRequestRequest) returns (AcceptFriendRequestReply) {};
    rpc RejectFriendRequest(RejectFriendRequestRequest) returns (RejectFriendRequestReply) {};
}

message SendFriendRequestRequest{
    int64 requestorUserId = 1;
    int64 receiverUserId = 2;
}

message SendFriendRequestReply{
    bool isSent = 1;
}

message AcceptFriendRequestRequest{
    int64 requestorUserId = 1;
    int64 receiverUserId = 2;
}

message AcceptFriendRequestReply{
    bool isAccepted = 1;
}

message RejectFriendRequestRequest{
    int64 requestorUserId = 1;
    int64 receiverUserId = 2;
}

message RejectFriendRequestReply{
    bool isRejected = 1;
}
